// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react-project > react-project 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [
      "react",
      "react-perf",
    ],
    "rules": {
      "react-hooks/exhaustive-deps": "warn",
      "react-hooks/rules-of-hooks": "error",
      "react-perf/jsx-no-new-array-as-prop": "error",
      "react-perf/jsx-no-new-function-as-prop": "error",
      "react-perf/jsx-no-new-object-as-prop": "error",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
    },
  },
  "warnings": [
    "unsupported rule: react/display-name",
    "unsupported rule: react/jsx-uses-vars",
    "unsupported rule: react/no-deprecated",
    "unsupported rule: react/prop-types",
    "unsupported rule, but available as a nursery rule: react/require-render-return",
    "unsupported rule: react-hooks/static-components",
    "unsupported rule: react-hooks/use-memo",
    "unsupported rule: react-hooks/void-use-memo",
    "unsupported rule: react-hooks/component-hook-factories",
    "unsupported rule: react-hooks/preserve-manual-memoization",
    "unsupported rule: react-hooks/incompatible-library",
    "unsupported rule: react-hooks/immutability",
    "unsupported rule: react-hooks/globals",
    "unsupported rule: react-hooks/refs",
    "unsupported rule: react-hooks/set-state-in-effect",
    "unsupported rule: react-hooks/error-boundaries",
    "unsupported rule: react-hooks/purity",
    "unsupported rule: react-hooks/set-state-in-render",
    "unsupported rule: react-hooks/unsupported-syntax",
    "unsupported rule: react-hooks/config",
    "unsupported rule: react-hooks/gating",
  ],
}
`;

exports[`react-project --js-plugins > react-project--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [
      "react",
      "react-perf",
    ],
    "rules": {
      "react-hooks/exhaustive-deps": "warn",
      "react-hooks/rules-of-hooks": "error",
      "react-perf/jsx-no-new-array-as-prop": "error",
      "react-perf/jsx-no-new-function-as-prop": "error",
      "react-perf/jsx-no-new-object-as-prop": "error",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
    },
  },
  "warnings": [
    "unsupported rule: react/display-name",
    "unsupported rule: react/jsx-uses-vars",
    "unsupported rule: react/no-deprecated",
    "unsupported rule: react/prop-types",
    "unsupported rule, but available as a nursery rule: react/require-render-return",
    "unsupported rule: react-hooks/static-components",
    "unsupported rule: react-hooks/use-memo",
    "unsupported rule: react-hooks/void-use-memo",
    "unsupported rule: react-hooks/component-hook-factories",
    "unsupported rule: react-hooks/preserve-manual-memoization",
    "unsupported rule: react-hooks/incompatible-library",
    "unsupported rule: react-hooks/immutability",
    "unsupported rule: react-hooks/globals",
    "unsupported rule: react-hooks/refs",
    "unsupported rule: react-hooks/set-state-in-effect",
    "unsupported rule: react-hooks/error-boundaries",
    "unsupported rule: react-hooks/purity",
    "unsupported rule: react-hooks/set-state-in-render",
    "unsupported rule: react-hooks/unsupported-syntax",
    "unsupported rule: react-hooks/config",
    "unsupported rule: react-hooks/gating",
  ],
}
`;

exports[`react-project --type-aware > react-project--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [
      "react",
      "react-perf",
    ],
    "rules": {
      "react-hooks/exhaustive-deps": "warn",
      "react-hooks/rules-of-hooks": "error",
      "react-perf/jsx-no-new-array-as-prop": "error",
      "react-perf/jsx-no-new-function-as-prop": "error",
      "react-perf/jsx-no-new-object-as-prop": "error",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
    },
  },
  "warnings": [
    "unsupported rule: react/display-name",
    "unsupported rule: react/jsx-uses-vars",
    "unsupported rule: react/no-deprecated",
    "unsupported rule: react/prop-types",
    "unsupported rule, but available as a nursery rule: react/require-render-return",
    "unsupported rule: react-hooks/static-components",
    "unsupported rule: react-hooks/use-memo",
    "unsupported rule: react-hooks/void-use-memo",
    "unsupported rule: react-hooks/component-hook-factories",
    "unsupported rule: react-hooks/preserve-manual-memoization",
    "unsupported rule: react-hooks/incompatible-library",
    "unsupported rule: react-hooks/immutability",
    "unsupported rule: react-hooks/globals",
    "unsupported rule: react-hooks/refs",
    "unsupported rule: react-hooks/set-state-in-effect",
    "unsupported rule: react-hooks/error-boundaries",
    "unsupported rule: react-hooks/purity",
    "unsupported rule: react-hooks/set-state-in-render",
    "unsupported rule: react-hooks/unsupported-syntax",
    "unsupported rule: react-hooks/config",
    "unsupported rule: react-hooks/gating",
  ],
}
`;

exports[`react-project merge > react-project--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [
      "react",
      "react-perf",
    ],
    "rules": {
      "react-hooks/exhaustive-deps": "warn",
      "react-hooks/rules-of-hooks": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-target-blank": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/no-unsafe": "off",
      "react/react-in-jsx-scope": "error",
    },
  },
  "warnings": [
    "unsupported rule: react/display-name",
    "unsupported rule: react/jsx-uses-vars",
    "unsupported rule: react/no-deprecated",
    "unsupported rule: react/prop-types",
    "unsupported rule, but available as a nursery rule: react/require-render-return",
    "unsupported rule: react-hooks/static-components",
    "unsupported rule: react-hooks/use-memo",
    "unsupported rule: react-hooks/void-use-memo",
    "unsupported rule: react-hooks/component-hook-factories",
    "unsupported rule: react-hooks/preserve-manual-memoization",
    "unsupported rule: react-hooks/incompatible-library",
    "unsupported rule: react-hooks/immutability",
    "unsupported rule: react-hooks/globals",
    "unsupported rule: react-hooks/refs",
    "unsupported rule: react-hooks/set-state-in-effect",
    "unsupported rule: react-hooks/error-boundaries",
    "unsupported rule: react-hooks/purity",
    "unsupported rule: react-hooks/set-state-in-render",
    "unsupported rule: react-hooks/unsupported-syntax",
    "unsupported rule: react-hooks/config",
    "unsupported rule: react-hooks/gating",
  ],
}
`;
